--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-query-devtools": "^5.32.0",
     "axios": "^1.6.8",
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.10.0",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
