--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.10.0",
-    "react-router-dom": "^6.23.0"
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.23.0",
+    "sweetalert2": "^11.10.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
